# RAG-using-Llama-3-by-Meta-AI

./: LICENSE  app.py  main.ipynb  pyproject.toml  requirements.txt  run_app.py
