[tool.poetry]
name = "rag-llama3"
version = "0.1.0"
description = "RAG using Llama 3 with Ollama"
authors = ["Syed Asad"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
altair = "4.0"
llama-index = "^0.10.30"

[tool.poetry.group.dev.dependencies]
llama-index-llms-ollama = "^0.1.2"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-instructor = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rag-llama3 = "run_app:main"

[[tool.poetry.packages]]
include = "app.py"
